tests/files/type_checker_tests/should_fail/182.cmdr
//Should fail calling something with incorrect number of parameters
fn add(a: int, b: int): int {
    return a + b;
}
println add(3);
